Code and docs for how to use Java AOT Cache